--- a/nodejs/src/html/index.html
+++ b/nodejs/src/html/index.html
@@ -69,8 +69,9 @@
             $timeout(function() {
                 vm.getData();
                 vm.intervalFunction();
-            }, 1000)
+            }, 10000)
         };
+        vm.getData();
         vm.intervalFunction();
     }
 </script>
